[package]
name = "rust_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Make sure "full" is present for tokio
tokio = { version = "1.0", features = ["full"] } 
# Make sure "json" is present for reqwest
reqwest = { version = "0.12", features = ["json"] }
